--- a/hiera.yaml
+++ b/hiera.yaml
@@ -1,10 +1,11 @@
 ---
-:backends:
-  - yaml
 
-:hierarchy:
-  - common
+version: 5
 
-:yaml:
-  :datadir:
-    '/vagrant/hiera'
+defaults:
+  datadir: '/vagrant/hiera'
+  data_hash: yaml_data
+
+hierarchy:
+ - name: "common"
+   path: common.yaml
