--- a/hiera.yaml
+++ b/hiera.yaml
@@ -7,5 +7,8 @@ defaults:
   data_hash: yaml_data
 
 hierarchy:
- - name: "common"
-   path: common.yaml
+  - name: "per node data"
+    path: "nodes/%{facts.networking.hostname}.yaml"
+
+  - name: "common"
+    path: "common.yaml"
